[gd_scene load_steps=2 format=3 uid="uid://cepsy81kbnd2g"]

[ext_resource type="Script" uid="uid://c3t8nxovfvc5a" path="res://Scenes/CoreScenes/ui.gd" id="1_xn2pn"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_xn2pn")

[node name="DGMoves" type="CheckButton" parent="."]
layout_mode = 1
offset_right = 170.0
offset_bottom = 31.0
text = "diagonal moves"

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_bottom = 89.0
grow_horizontal = 0
auto_height = true
item_count = 3
item_0/text = "small"
item_1/text = "medium"
item_2/text = "large"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.5
offset_right = 74.5
offset_bottom = 40.0
grow_horizontal = 2
text = "Score: 0"

[node name="Undo" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
text = "Undo"

[node name="Reset" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Reset"

[connection signal="toggled" from="DGMoves" to="." method="_on_dg_moves_toggled"]
[connection signal="item_clicked" from="ItemList" to="." method="_on_item_list_item_clicked"]
[connection signal="item_selected" from="ItemList" to="." method="_on_item_list_item_selected"]
[connection signal="pressed" from="Undo" to="." method="_on_undo_pressed"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
